--- a/SithAcademy/SithAcademy/Areas/Identity/Pages/Account/Register.cshtml
+++ b/SithAcademy/SithAcademy/Areas/Identity/Pages/Account/Register.cshtml
@@ -10,7 +10,6 @@
     <div class="col-md-4">
         <form id="registerForm" asp-route-returnUrl="@Model.ReturnUrl" method="post">
             <h2 class="text-center">Create a new account.</h2>
-            <hr />
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-floating">
                 <input asp-for="Input.Username" class="form-control" autocomplete="username" aria-required="true" />
@@ -32,8 +31,13 @@
                 <label asp-for="Input.ConfirmPassword"></label>
                 <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
             </div>
-            <hr />
+            <p></p>
             <button id="registerSubmit" type="submit" class="w-100 btn btn-lg btn-primary">Register</button>
+            <div>
+                <p>
+                    <a asp-page="./Login" asp-route-returnUrl="@Model.ReturnUrl">Already registered? Sign in!</a>
+                </p>
+            </div>
         </form>
     </div>
 </div>
