--- a/SithAcademy/SithAcademy/Views/_ViewImports.cshtml
+++ b/SithAcademy/SithAcademy/Views/_ViewImports.cshtml
@@ -1,4 +1,5 @@
 ﻿@using SithAcademy.Web
 @using SithAcademy.Data.Models
 @using SithAcademy.Web.ViewModels
+@using SithAcademy.Web.ViewModels.Trial
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
