--- a/SithAcademy/SithAcademy/Areas/Identity/Pages/Account/Login.cshtml
+++ b/SithAcademy/SithAcademy/Areas/Identity/Pages/Account/Login.cshtml
@@ -10,7 +10,6 @@
     <div class="col-md-4">
         <section>
             <form id="account" method="post">
-                <hr />
                 <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                 <div class="form-floating">
                     <input asp-for="Input.Username" class="form-control" autocomplete="username" aria-required="true" />
@@ -35,7 +34,7 @@
                 </div>
                 <div>
                     <p>
-                        <a asp-page="./Register" asp-route-returnUrl="@Model.ReturnUrl">Register as a new user</a>
+                        <a asp-page="./Register" asp-route-returnUrl="@Model.ReturnUrl">Don't have an account? Register today!</a>
                     </p>
                 </div>
             </form>
