--- a/SithAcademy/SithAcademy/Views/Home/Index.cshtml
+++ b/SithAcademy/SithAcademy/Views/Home/Index.cshtml
@@ -1,3 +1,39 @@
-﻿@{
+﻿@model IEnumerable<TrialOverviewViewModel>
+@{
     ViewData["Title"] = "Home Page";
+    TrialOverviewViewModel[] trials = Model.ToArray();
+}
+
+@if (User.Identity != null && User.Identity.IsAuthenticated)
+{
+    <p>Welcome back, acolyte @User.Identity.Name</p>
+
+    @if (trials.Any())
+    {
+        @for (int i = 0; i < trials.Length; i++)
+        {
+            TrialOverviewViewModel trial = trials[i];
+
+            <div class="card" style="width: 18rem;">
+                <div class="card-body">
+                    <h5 class="card-title">@trial.Title</h5>
+                    <h3 class="card-title">@trial.AcademyTitle</h3>
+                    <p class="card-text">@trial.Description</p>
+                    <a href="#" class="btn btn-primary">View trial resources</a>
+                </div>
+            </div>
+        }
+    }
+    else
+    {
+        <p>You have completed your assigned trials. Reach out to our other academies to find out what more you can learn.</p>
+    }
+}
+else
+{
+    <p>So you want to become Sith? You have come to the right place!</p>
+    <a class="nav-link text-success" asp-area="Identity" asp-page="/Account/Register">Create an account and begin delving into the secrets of the Dark Side today!</a>
+    <p></p>
+    <p>Already an acolyte?</p>
+    <a class="nav-link text-info" asp-area="Identity" asp-page="/Account/Login">Log in and resume your studies!</a>
 }
