--- a/SithAcademy/SithAcademy/Views/_ViewImports.cshtml
+++ b/SithAcademy/SithAcademy/Views/_ViewImports.cshtml
@@ -2,4 +2,5 @@
 @using SithAcademy.Data.Models
 @using SithAcademy.Web.ViewModels
 @using SithAcademy.Web.ViewModels.Trial
+@using SithAcademy.Web.ViewModels.Academy
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
