--- a/SithAcademy/SithAcademy/Views/Home/Index.cshtml
+++ b/SithAcademy/SithAcademy/Views/Home/Index.cshtml
@@ -30,7 +30,7 @@
                                     }
                                     else
                                     {
-                                        <a href="#" class="btn btn-primary">View trial resources</a>
+                                        <a asp-controller="Trial" asp-action="Display" asp-route-id="@trial.Id" class="btn btn-danger mb-2">Trial Details</a>
                                     }
                                 </div>
                             </div>
