--- a/SithAcademy/SithAcademy/Views/_ViewImports.cshtml
+++ b/SithAcademy/SithAcademy/Views/_ViewImports.cshtml
@@ -3,4 +3,5 @@
 @using SithAcademy.Web.ViewModels
 @using SithAcademy.Web.ViewModels.Trial
 @using SithAcademy.Web.ViewModels.Academy
+@using SithAcademy.Web.ViewModels.Location
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
