--- a/SithAcademy/SithAcademy/Views/Academy/Display.cshtml
+++ b/SithAcademy/SithAcademy/Views/Academy/Display.cshtml
@@ -15,6 +15,7 @@
             <div class="col">
                 <div class="row d-flex justify-content-center">
                     <div class="card" style="width: 18rem;">
+                        <img class="card-img-top" src="@academy.ImageUrl" alt="Academy Image">
                         <div class="card-body">
                             <h3 class="card-title">@academy.Title</h3>
                             <h5 class="card-title">@academy.LocationName</h5>
