--- a/SithAcademy/SithAcademy/Views/Location/Details.cshtml
+++ b/SithAcademy/SithAcademy/Views/Location/Details.cshtml
@@ -4,6 +4,10 @@
 <hr />
 
 <div class="d-flex justify-content-center">
+    <div class="col-4">
+        <img class="card-img-top" style="width: 20rem;"
+             src="@Model.ImageUrl" alt="@Model.Name Image">
+    </div>
     <div class="card" style="width: 50rem;">
         <div class="card-body">
             <p class="card-text">@Model.Description</p>
