--- a/SithAcademy/SithAcademy/Views/Academy/Details.cshtml
+++ b/SithAcademy/SithAcademy/Views/Academy/Details.cshtml
@@ -5,6 +5,7 @@
 
 <div class="d-flex justify-content-center">
     <div class="card" style="width: 50rem;">
+        <img class="card-img-top" src="@Model.ImageUrl" alt="@Model.Title Image">
         <div class="card-body">
             <p class="card-text">@Model.Description</p>
 
