--- a/SithAcademy/SithAcademy/Views/Shared/_LockedPartial.cshtml
+++ b/SithAcademy/SithAcademy/Views/Shared/_LockedPartial.cshtml
@@ -1,1 +1,1 @@
-﻿<h2 class="text-center text-danger bg-dark">[+++ACCESS RESTRICTED ON THE ORDERS OF THE HIGH INQUISITOR+++]</h2>
+﻿<h2 class="text-center text-danger bg-dark">[+++THIS ACADEMY HAS BEEN PLACED ON LOCKDOWN. AWAIT FURTHER DEVELOPMENTS+++]</h2>
