--- a/SithAcademy/SithAcademy/Views/Academy/Details.cshtml
+++ b/SithAcademy/SithAcademy/Views/Academy/Details.cshtml
@@ -21,7 +21,7 @@
                     @foreach (TrialOverviewViewModel trial in Model.Trials)
                     {
                         <p class="card-text">@trial.Title</p>
-                        <a asp-controller="Trial" asp-action="Display" asp-route-id="@trial.Id" class="btn btn-warning mb-2">Trial Details</a>
+                        <a asp-controller="Trial" asp-action="Details" asp-route-id="@trial.Id" class="btn btn-warning mb-2">Trial Details</a>
                     }
                 }
                 else
@@ -33,7 +33,7 @@
             }
             else
             {
-                <partial name="_LockedPartial" />
+                <h2 class="text-center text-danger bg-dark">[+++THIS ACADEMY HAS BEEN PLACED ON LOCKDOWN. AWAIT FURTHER DEVELOPMENTS+++]</h2>
             }
         </div>
     </div>
