--- a/SithAcademy/SithAcademy/Views/Home/Index.cshtml
+++ b/SithAcademy/SithAcademy/Views/Home/Index.cshtml
@@ -7,7 +7,7 @@
     <div class="row">
         @if (User.Identity != null && User.Identity.IsAuthenticated)
         {
-            <partial name="_IncompleteTrialsPartial" model="Model.ToArray()"></partial>
+            <partial name="_AcolyteHomePartial" model="Model.ToArray()"></partial>
         }
         else
         {
