--- a/SithAcademy/SithAcademy/Views/Shared/_AcolyteHomePartial.cshtml
+++ b/SithAcademy/SithAcademy/Views/Shared/_AcolyteHomePartial.cshtml
@@ -1,10 +1,10 @@
 ﻿@model IncompleteTrialViewModel[]
 
-<h3>Welcome, acolyte @User.Identity!.Name</h3>
+<h3 class="mb-4">Welcome, acolyte @User.Identity!.Name</h3>
 
 @if (Model.Any())
 {
-    <h4>You will find your incomplete trials listed below.</h4>
+    <h4 class="mb-2">You will find your incomplete trials listed below.</h4>
 
     @for (int i = 0; i < Model.Length; i++)
     {
@@ -16,7 +16,7 @@
                     <div class="card-body">
                         <h3 class="card-title text-danger">@trial.Title</h3>
                         <h5 class="card-title">@trial.AcademyTitle</h5>
-                        <a asp-controller="Trial" asp-action="Display" asp-route-id="@trial.Id" class="btn btn-danger mb-2">Trial Details</a>
+                        <a asp-controller="Trial" asp-action="Details" asp-route-id="@trial.Id" class="btn btn-danger mb-2">Trial Details</a>
                     </div>
                 </div>
             </div>
@@ -25,6 +25,6 @@
 }
 else
 {
-    <p class="mb-0">You have no trials to display.</p>
-    <a class="text-danger m-0 pt-0" asp-controller="Academy" asp-action="Display">Explore what our academies have to offer!</a>
+    <h4 class="mb-2">You have no incomplete trials to display.</h4>
+    <a class="text-danger m-0 pt-0 h4" asp-controller="Academy" asp-action="Display">Explore what our academies have to offer!</a>
 }
