--- a/SithAcademy/SithAcademy/Views/_ViewImports.cshtml
+++ b/SithAcademy/SithAcademy/Views/_ViewImports.cshtml
@@ -4,4 +4,5 @@
 @using SithAcademy.Web.ViewModels.Trial
 @using SithAcademy.Web.ViewModels.Academy
 @using SithAcademy.Web.ViewModels.Location
+@using SithAcademy.Web.ViewModels.Resource
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
