--- a/SithAcademy/SithAcademy/Views/Location/Details.cshtml
+++ b/SithAcademy/SithAcademy/Views/Location/Details.cshtml
@@ -23,7 +23,7 @@
             }
             else
             {
-                <partial name="_LockedPartial" />
+                <h2 class="text-center text-danger bg-dark">[+++THIS LOCATION HAS BEEN PLACED ON LOCKDOWN. AWAIT FURTHER DEVELOPMENTS+++]</h2>
             }
         </div>
     </div>
